--- a/_drafts/voting.html
+++ b/_drafts/voting.html
@@ -334,6 +334,10 @@ winner, with Poster A coming second!</p>
 <p>So whilst Posters A and D have the same number of first preferences, more people
 preference D over all other posters, than they do A.</p>
 
+<p>Above all else, congratulations to Poster A, which was produced by Dr Gemma
+Vincent. Gemma scooped the pool at Research Week, winning another two prizes on
+top of here ECR prize. Congratulations Gemma!</p>
+
 <p>Majority rules!</p>
 
 </body>
